--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.28",
     "expo-av": "~15.0.2",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.0.14",
     "expo-image-picker": "~16.0.4",
     "expo-sensors": "~14.0.2",
     "expo-status-bar": "~2.0.1",
@@ -24,6 +26,7 @@
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-progress": "^5.0.1",
+    "react-native-qrcode-svg": "^6.3.14",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
