--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "expo-image-picker": "~16.0.4",
     "expo-sensors": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.2.2",
     "lucide-react-native": "^0.474.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
