--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@supabase/supabase-js": "^2.48.1",
     "expo": "~52.0.28",
     "expo-av": "~15.0.2",
     "expo-image-picker": "~16.0.4",
