--- a/package.json
+++ b/package.json
@@ -32,17 +32,21 @@
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-svg": "^6.3.14",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-video": "^6.10.0"
+    "react-native-video": "^6.10.0",
+    "react-native-vision-camera": "^4.6.3",
+    "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-syntax-jsx": "^7.25.9",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
+    "babel-preset-expo": "^12.0.6",
     "typescript": "^5.3.3"
   },
   "private": true
