--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^4.5.5",
-    "@react-native/virtualized-lists": "^0.77.0",
     "@react-native-picker/picker": "^2.11.0",
+    "@react-native/virtualized-lists": "^0.77.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.48.1",
     "expo": "~52.0.28",
     "expo-av": "~15.0.2",
@@ -39,6 +40,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
+    "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.10.0",
     "whatwg-url-without-unicode": "^8.0.0-3"
