lagde event leaderbord (ikke ferdig), oppdatert lag egen aktivitet siden

--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "^2.11.0",
     "@react-native/virtualized-lists": "^0.77.0",
@@ -30,9 +31,11 @@
     "lucide-react-native": "^0.474.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-calendar-picker": "^6.1.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-svg": "^6.3.14",
