--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "^2.11.0",
     "@react-native/virtualized-lists": "^0.77.0",
