--- a/Vitus-Aktivitet/app.json
+++ b/Vitus-Aktivitet/app.json
@@ -19,7 +19,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sarim3.VitusAktivitet"
     },
     "web": {
       "favicon": "./assets/favicon.png"
