--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -10,7 +10,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/slider": "^4.5.5",
@@ -24,8 +23,10 @@
     "expo": "52.0.35",
     "expo-av": "~15.0.2",
     "expo-barcode-scanner": "^13.0.1",
+    "expo-blur": "^14.0.3",
     "expo-camera": "~16.0.16",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "^14.0.2",
     "expo-sensors": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "lottie-ios": "^4.5.1",
