--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -36,6 +36,7 @@
     "react-native": "0.76.7",
     "react-native-calendar-picker": "^6.1.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "^2.5.7",
@@ -45,6 +46,7 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.8.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
