--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "2.9.0",
     "@react-native/virtualized-lists": "^0.77.0",
