--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -32,6 +32,7 @@
     "expo-status-bar": "~2.0.1",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "7.1.0",
+    "lucide-react": "^0.475.0",
     "lucide-react-native": "^0.474.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
