--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -43,10 +43,11 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-haptic-feedback": "^2.3.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-svg": "^6.3.14",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.8.0",
