--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,4 @@ MSSQL_USER=hractivitysqladmin
 MSSQL_PASSWORD='PfXncOHUc;?AfPgRFz"o'
 MSSQL_PORT=1433
 MSSQL_ENCRYPT=true
+SESSION_SECRET=SuperNøkkelForVitusAktivitet!
