--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -20,11 +20,11 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.48.1",
-    "expo": "52.0.36",
+    "expo": "~52.0.38",
     "expo-av": "~15.0.2",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "^14.0.3",
-    "expo-camera": "16.0.17",
+    "expo-camera": "~16.0.18",
     "expo-haptics": "^14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
