--- a/server/web.config
+++ b/server/web.config
@@ -20,6 +20,8 @@
       nodeProcessCommandLine="node"
       watchedFiles="web.config;*.js"
       loggingEnabled="true"
+      debuggingEnabled="true"
+      devErrorsEnabled="true"
     />
   </system.webServer>
 </configuration>
