--- a/.github/workflows/main_apphractivity01.yml
+++ b/.github/workflows/main_apphractivity01.yml
@@ -27,6 +27,7 @@ jobs:
         working-directory: server
         run: |
           npm install
+          npm rebuild bcrypt --build-from-source
           npm run build --if-present
           npm run test --if-present
       
