--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "expo": "~52.0.38",
     "expo-av": "~15.0.2",
     "expo-barcode-scanner": "^13.0.1",
@@ -51,7 +52,7 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel": "^1.3.1",
     "react-native-svg": "^15.8.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-tab-view": "^4.0.5",
