--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -36,6 +36,8 @@
     "lottie-react-native": "7.1.0",
     "lucide-react": "^0.475.0",
     "lucide-react-native": "^0.474.0",
+    "moment-timezone": "^0.5.48",
+    "node-schedule": "^2.1.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-background-fetch": "^4.2.7",
