--- a/.github/workflows/main_apphractivity01.yml
+++ b/.github/workflows/main_apphractivity01.yml
@@ -5,10 +5,9 @@ name: Build and deploy Node.js app to Azure Web App - apphractivity01
 
 on:
   push:
-    branches:
-      [ "main", "Daniel's-new-branch"]
+    branches: ["main", "Daniel's-new-branch", "Sarim's-Workspace-4"]
     paths:
-      - 'server/**'
+      - "server/**"
   workflow_dispatch:
 
 jobs:
@@ -23,7 +22,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
       - name: npm install, build, and test
         working-directory: server
@@ -31,7 +30,7 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -42,20 +41,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
-      - name: 'Deploy to Azure Web App'
+
+      - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'apphractivity01'
-          slot-name: 'Production'
+          app-name: "apphractivity01"
+          slot-name: "Production"
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E955EA6411EA463995CAB9A3A48C3438 }}
