--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -28,6 +28,7 @@
     "expo-blur": "^14.0.3",
     "expo-camera": "~16.0.18",
     "expo-haptics": "^14.0.1",
+    "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-sensors": "~14.0.2",
