--- a/.github/workflows/main_apphractivity01.yml
+++ b/.github/workflows/main_apphractivity01.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches:
 
-      [ "main", "Daniel's-new-branch", "Hashim's-Workspace-4" , "Sarim's-Workspace-7" ]
+      [ "main", "Daniel's-new-branch", "Hashim's-Workspace-4" , "Sarim's-Workspace-7", "fix-git-pull-reference-issue" ]
 
     paths:
       - 'server/**'
