--- a/Vitus-Aktivitet/package.json
+++ b/Vitus-Aktivitet/package.json
@@ -10,10 +10,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-community/slider": "^4.5.5",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/slider": "4.5.6",
+    "@react-native-picker/picker": "2.11.0",
     "@react-native/virtualized-lists": "^0.77.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -22,39 +22,40 @@
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
-    "expo": "~52.0.38",
-    "expo-av": "~15.0.2",
+    "expo": "^53.0.8",
+    "expo-av": "~15.1.4",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-blur": "^14.0.3",
-    "expo-camera": "~16.0.18",
-    "expo-haptics": "^14.0.1",
-    "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-sensors": "~14.0.2",
-    "expo-status-bar": "~2.0.1",
+    "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-haptics": "~14.1.4",
+    "expo-image-manipulator": "~13.1.6",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-sensors": "~14.1.4",
+    "expo-status-bar": "~2.2.3",
     "lottie-ios": "^4.5.1",
-    "lottie-react-native": "7.1.0",
+    "lottie-react-native": "7.2.2",
     "lucide-react": "^0.475.0",
     "lucide-react-native": "^0.474.0",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
+    "metro": "^0.82.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-background-fetch": "^4.2.7",
     "react-native-calendar-picker": "^6.1.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-confetti-cannon": "^1.5.2",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-snap-carousel": "^1.3.1",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "15.11.2",
     "react-native-swipeable": "^0.6.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
@@ -63,9 +64,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
